# dotfiles

./: .editorconfig  .gitignore  .stowrc  Brewfile  Brewfile.linux  CHANGELOG.md  CLAUDE.md  DEEP_DIVE.md  GUIDE.md  LICENSE  ONBOARDING.md  README.md  cliff.toml  install.sh  uninstall.sh
.github/workflows/: release.yml  test-dotfiles.yml
aerospace/.config/aerospace/: aerospace.toml
borders/.config/borders/: bordersrc
claude-hooks/.config/claude-hooks/: claude-md-snippet.md  install.sh  project-settings.json  projects.json  write-status.sh
claude-observer/: CHANGELOG.md  Cargo.toml  README.md
claude-observer/scripts/: send-event.sh
claude-observer/src/: app.rs  config.rs  main.rs
claude-observer/src/event/: input.rs  mod.rs  socket.rs
claude-observer/src/state/: agent.rs  mod.rs
claude-observer/src/ui/: mod.rs
claude/.claude/: settings.json
docs/: GUIDE.md  INDEX.md  KEYMAPS.md  NIX-MIGRATION.md  TOOLS.md
dot-gitconfig/: dot-gitconfig
dot-zprofile/: dot-zprofile
dot-zshenv/: dot-zshenv
gh/.config/gh/: config.yml
ghostty/.config/ghostty/: config
karabiner/.config/karabiner/: karabiner.json
nvim/.config/nvim/: lazyvim.json
scripts/: benchmark.sh
sketchybar/.config/sketchybar/: UNIXPORN_UPGRADE.md  colors.sh  sketchybarrc
sketchybar/.config/sketchybar/items/: cpu.sh  spaces.sh
sketchybar/.config/sketchybar/plugins/: aerospacer.sh  (+3 more)
ssh/.ssh/: config
starship/.config/: starship.toml
tmux/.config/tmux/: tmux.conf
wezterm/.config/wezterm/: wezterm.lua
zsh/.config/zsh/: .zprofile  .zsh_plugins.txt  dot-zsh_plugins.txt  dot-zshrc
(+25 files in other folders)
