[package]
name = "claude-observer"
version = "0.1.0"
edition = "2021"
description = "Real-time observability TUI for Claude Code instances"
license = "MIT"
authors = ["Mohamed Mohamed"]
repository = "https://github.com/m-mohamed/dotfiles"
keywords = ["cli", "tui", "claude", "observability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.43", features = ["full", "net"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
directories = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
